# SafeDF

./: .gitignore  README.md  main.py  main_semantic.py  pyproject.toml  requirements_semantic_esdf.txt
config/: base.yaml  base_subsample10.yaml
efficientvit/: debug_mapping.py  test_single_image.py
efficientvit/efficientvit/apps/utils/: __init__.py
mast3r_slam/: dataloader.py  depth_stabilizer.py  efficientvit_segmenter.py  esdf_snapshot.py  evaluate.py  frame.py  global_esdf_snapshot.py  planning_hook.py  planning_pointcloud_buffer.py  planning_pointcloud_client.py  planning_pointcloud_viz.py  planning_tsdf.py  semantic_stabilizer.py  tracker.py  visualizatio_semantics.py  visualization.py
mast3r_slam/streaming/: __init__.py  airsim_source.py  async_segmenter.py  debug_viz.py  shared_debug_buffer.py  zmq_source.py
repro/table_metrics/: README_success6_final_experiment.md  paper_tables_reproduced.tex  success6_3methods_exposure_main_table.csv  success6_3methods_main_table.csv  success6_3methods_matched_progress_rows.csv  success6_matchbalanced_subtable_matched_progress.csv
resources/: mesh_to_ade20k_all.csv
resources/programs/: surfelmap.glsl  trianglemap.glsl
scripts/: blend_rgb_sem_to_video.py  export_esdf_snapshot.py  export_esdf_snapshot_visualization.py  export_scene_specific_semantic_risk_configs.py  recompute_paper_tables_from_rollouts.py  render_rgb_esdf_side_by_side.py  run_video_esdf_batch.sh  stack_three_videos.py  verify_released_table_csv.py  view_esdf_snapshot_open3d.py  view_esdf_snapshot_viser.py
(+1 files in other folders)
